<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Vorlesung</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_activity_question">QuestionActivity</string>
    <string name="example">Examples</string>
    <string name="navigation">Navigation exampel</string>
    <string name="title_activity_broadcast">BroadcastActivity</string>
    <string name="layout_examples">Layout examples</string>
    <string name="broadcast_example">Broadcast example</string>
    <string name="title_activity_layout_bsp">LayoutBspActivity</string>
    <string name="headline_layouts">Layout exmaples</string>
    <string name="text_example">BlaBla</string>
    <string name="ed_hint_answer">Answer the question</string>
    <string name="btn_answer">Answer</string>
    <string name="lbl_question">Ask a question</string>
    <string name="btn_send_broadcast">send Broadcast</string>
    <string name="btn_linear">Linear Layout</string>
    <string name="btn_table">Table Layout</string>
    <string name="btn_relativ">Relativ Layout</string>
    <string name="btn_frame">Frame Layout</string>
    <string name="btn_absolut">Absolut Layout</string>

</resources>
