<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/example"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btn_start_activity_to_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/navigation"
        android:onClick="onClick" />
    
    <Button
        android:id="@+id/btn_start_activity_to_layouts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/layout_examples" />
    
    <Button
        android:id="@+id/btn_start_to_broadcast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/broadcast_example" />

</LinearLayout>
