<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".QuestionActivity" >

    <TextView
        android:id="@+id/lbl_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <EditText
        android:id="@+id/txt_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lbl_question"
        android:layout_below="@+id/lbl_question"
        android:ems="10"
        android:hint="@string/text_example"
        android:text="@string/ed_hint_answer" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/txt_answer"
        android:layout_below="@+id/txt_answer"
        android:onClick="onClick"
        android:text="@android:string/cancel" />

    <Button
        android:id="@+id/btn_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_answer"
        android:layout_toLeftOf="@+id/btn_cancel"
        android:onClick="onClick"
        android:text="@string/btn_answer" />

</RelativeLayout>
